--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.1.1", features = ["derive", "unstable-doc"] }
+serde = { version = "1.0.152", features = ["derive"] }
