--- a/src/template/pulumi/.circleci/config.yml
+++ b/src/template/pulumi/.circleci/config.yml
@@ -1,17 +1,20 @@
 orbs:
   aws-cli: circleci/aws-cli@3.1.3
 
+parameters:
+  image_tag:
+    default: "altf4llc-{{ name }}"
+    type: string
+  registry:
+    default: "{{ registry }}"
+    type: string
+
 commands:
   login-ecr:
     steps:
       - run:
           name: Login to ECR
-          command: just login ${AWS_ECR_DOMAIN}
-  login-acr:
-    steps:
-      - run:
-          name: Login to ACR
-          command: mycommand
+          command: just login << pipeline.parameters.registry >>
 
 jobs:
   build:
@@ -49,7 +52,7 @@ jobs:
 
   refresh:
     docker:
-      - image: $AWS_ECR_DOMAIN/{{ name }}:${CIRCLE_SHA1}
+      - image: << pipeline.parameters.registry >>/<< pipeline.parameters.image_tag >>:${CIRCLE_SHA1}
         aws_auth:
           aws_access_key_id: $AWS_ACCESS_KEY_ID
           aws_secret_access_key: $AWS_SECRET_ACCESS_KEY
@@ -62,7 +65,7 @@ jobs:
 
   preview:
     docker:
-      - image: $AWS_ECR_DOMAIN/{{ name }}:${CIRCLE_SHA1}
+      - image: << pipeline.parameters.registry >>/<< pipeline.parameters.image_tag >>:${CIRCLE_SHA1}
         aws_auth:
           aws_access_key_id: $AWS_ACCESS_KEY_ID
           aws_secret_access_key: $AWS_SECRET_ACCESS_KEY
@@ -75,7 +78,7 @@ jobs:
 
   update:
     docker:
-      - image: $AWS_ECR_DOMAIN/{{ name }}:${CIRCLE_SHA1}
+      - image: << pipeline.parameters.registry >>/<< pipeline.parameters.image_tag >>:${CIRCLE_SHA1}
         aws_auth:
           aws_access_key_id: $AWS_ACCESS_KEY_ID
           aws_secret_access_key: $AWS_SECRET_ACCESS_KEY
