--- a/src/template/pulumi/.circleci/config.yml
+++ b/src/template/pulumi/.circleci/config.yml
@@ -14,7 +14,7 @@ commands:
     steps:
       - run:
           name: Login to ECR
-          command: just login << pipeline.parameters.registry >>
+          command: just login
 
 jobs:
   build:
@@ -61,7 +61,7 @@ jobs:
     steps:
       - run:
           name: Refresh stack
-          command: just refresh "${CIRCLE_SHA1}"
+          command: just refresh
 
   preview:
     docker:
@@ -74,7 +74,7 @@ jobs:
     steps:
       - run:
           name: Preview stack
-          command: just preview "${CIRCLE_SHA1}"
+          command: just preview
 
   update:
     docker:
@@ -88,7 +88,7 @@ jobs:
     steps:
       - run:
           name: Update stack
-          command: just update "${CIRCLE_SHA1}"
+          command: just update
 
 workflows:
   build-preview-update:
