feat(config): adds more support for docker settings

--- a/src/template/pulumi/.circleci/config.yml
+++ b/src/template/pulumi/.circleci/config.yml
@@ -6,7 +6,7 @@ parameters:
     default: "altf4llc-{{ name }}"
     type: string
   registry:
-    default: "{{ registry }}"
+    default: "{{ dockerfile.registry }}"
     type: string
 
 commands:
