--- a/src/template/pulumi/justfile
+++ b/src/template/pulumi/justfile
@@ -2,7 +2,7 @@ set shell := ["bash", "-c"]
 
 config := "circleci"
 project := "{{ name }}"
-registry := "{{ registry }}"
+registry := "{{ dockerfile.registry }}"
 stack := "prod"
 
 {% raw -%}
