--- a/src/template/pulumi/tsconfig.json
+++ b/src/template/pulumi/tsconfig.json
@@ -1,3 +1,8 @@
+//░█▀█░█░█░▀█▀░█▀█░░░░░█▀▀░█▀▀░█▀█░█▀▀░█▀▄░█▀█░▀█▀░█▀▀░█▀▄
+//░█▀█░█░█░░█░░█░█░▄▄▄░█░█░█▀▀░█░█░█▀▀░█▀▄░█▀█░░█░░█▀▀░█░█
+//░▀░▀░▀▀▀░░▀░░▀▀▀░░░░░▀▀▀░▀▀▀░▀░▀░▀▀▀░▀░▀░▀░▀░░▀░░▀▀▀░▀▀░
+// DO NOT UPDATE: This file is managed by "build-configs"
+
 {
   "compilerOptions": {
     "strict": true,
