--- a/src/template/pulumi/.circleci/config.yml
+++ b/src/template/pulumi/.circleci/config.yml
@@ -1,3 +1,8 @@
+#░█▀█░█░█░▀█▀░█▀█░░░░░█▀▀░█▀▀░█▀█░█▀▀░█▀▄░█▀█░▀█▀░█▀▀░█▀▄
+#░█▀█░█░█░░█░░█░█░▄▄▄░█░█░█▀▀░█░█░█▀▀░█▀▄░█▀█░░█░░█▀▀░█░█
+#░▀░▀░▀▀▀░░▀░░▀▀▀░░░░░▀▀▀░▀▀▀░▀░▀░▀▀▀░▀░▀░▀░▀░░▀░░▀▀▀░▀▀░
+# DO NOT UPDATE: This file is managed by "build-configs"
+
 orbs:
   aws-cli: circleci/aws-cli@3.1.3
 
@@ -21,9 +26,22 @@ jobs:
     docker:
       - image: cimg/base:current
     resource_class: small
+
     steps:
       - aws-cli/install
+{% if pulumi.npm %}
+      - run:
+          name: Install Doppler CLI - latest
+          command: |
+            (curl -Ls https://cli.doppler.com/install.sh \
+              || wget -qO- https://cli.doppler.com/install.sh) \
+              | sh -s -- --no-install --no-package-manager
 
+            mkdir -p /tmp/doppler
+            mv ./doppler /tmp/doppler/doppler
+
+            echo 'export PATH=/tmp/doppler:"$PATH"' >> "$BASH_ENV"
+{% endif %}
       - run:
           name: Install Just CLI - latest
           command: |
@@ -59,9 +77,15 @@ jobs:
     parameters:
       stack:
         type: string
-    resource_class: small
+    resource_class: {{ pulumi.resource_class | safe }}
     working_directory: /usr/src/app
+
     steps:
+{%- if pulumi.kubernetes != "" %}
+      - run:
+          name: Update kubeconfig
+          command: just update-kubeconfig
+{% endif %}
       - run:
           name: Refresh stack
           command: just refresh << parameters.stack >>
@@ -75,9 +99,15 @@ jobs:
     parameters:
       stack:
         type: string
-    resource_class: small
+    resource_class: {{ pulumi.resource_class | safe }}
     working_directory: /usr/src/app
+
     steps:
+{%- if pulumi.kubernetes != "" %}
+      - run:
+          name: Update kubeconfig
+          command: just update-kubeconfig
+{% endif %}
       - run:
           name: Preview stack
           command: just preview << parameters.stack >>
@@ -91,10 +121,15 @@ jobs:
     parameters:
       stack:
         type: string
-    resource_class: small
+    resource_class: {{ pulumi.resource_class | safe }}
     working_directory: /usr/src/app
 
     steps:
+{%- if pulumi.kubernetes != "" %}
+      - run:
+          name: Update kubeconfig
+          command: just update-kubeconfig
+{% endif %}
       - run:
           name: Update stack
           command: just update << parameters.stack >>
@@ -105,8 +140,7 @@ workflows:
       - build:
           context:
             - altf4llc-aws
-
-      {% for environment in environments -%}
+{% for environment in environments %}
       - refresh:
           name: refresh-{{ environment }}
           stack: {{ environment }}
@@ -114,9 +148,8 @@ workflows:
             - altf4llc-aws
           requires:
             - build
-      {%- endfor %}
-
-      {% for environment in environments -%}
+{% endfor -%}
+{% for environment in environments %}
       - preview:
           name: preview-{{ environment }}
           stack: {{ environment }}
@@ -124,9 +157,8 @@ workflows:
             - altf4llc-aws
           requires:
             - refresh-{{ environment }}
-      {%- endfor %}
-
-      {% for environment in environments -%}
+{% endfor -%}
+{% for environment in environments %}
       - update:
           name: update-{{ environment }}
           stack: {{ environment }}
@@ -138,6 +170,5 @@ workflows:
                 - main
           requires:
             - preview-{{ environment }}
-      {%- endfor %}
-
+{% endfor %}
 version: 2.1
