--- a/internal/templates/templates/go-cobra-cli/justfile
+++ b/internal/templates/templates/go-cobra-cli/justfile
@@ -3,8 +3,10 @@ build profile='default'{{ if .PrivateModules }} netrc="/tmp/.netrc=/tmp/.netrc"{
         --json \
         --no-link \
         --print-build-logs \
+        {{- if .PrivateModules }}
         --sandbox \
         --sandbox-paths "{{"{{"}} netrc {{"}}"}}" \
+        {{ end -}}
         '.#{{"{{"}} profile {{"}}"}}'
 
 build-docker{{ if .PrivateModules }} netrc="/tmp/.netrc=/tmp/.netrc"{{ end }}: (build 'docker'{{ if .PrivateModules }} netrc{{ end }})
