--- a/internal/templates/templates/go-cobra-cli/.github__workflows__flake.yaml
+++ b/internal/templates/templates/go-cobra-cli/.github__workflows__flake.yaml
@@ -29,27 +29,27 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: cachix/cachix-action@v14
         with:
-          authToken: ${{"{{"}} secrets.ALTF4LLC_CACHIX_AUTH_TOKEN ${{"}}"}}
-          name: ${{"{{"}} env.CACHIX_BINARY_CACHE ${{"}}"}}
-      {{ if .PrivateModules }}
+          authToken: ${{"{{"}} secrets.ALTF4LLC_CACHIX_AUTH_TOKEN {{"}}"}}
+          name: ${{"{{"}} env.CACHIX_BINARY_CACHE {{"}}"}}
+      {{ if .PrivateModules -}}
       - id: generate-token
         uses: actions/create-github-app-token@v1
         with:
-          app-id: ${{"{{"}} secrets.ALTF4LLC_GITHUB_APP_ID ${{"}}"}}
-          owner: ${{"{{"}} github.repository_owner ${{"}}"}}
-          private-key: ${{"{{"}} secrets.ALTF4LLC_GITHUB_APP_PRIVATE_KEY ${{"}}"}}
+          app-id: ${{"{{"}} secrets.ALTF4LLC_GITHUB_APP_ID {{"}}"}}
+          owner: ${{"{{"}} github.repository_owner {{"}}"}}
+          private-key: ${{"{{"}} secrets.ALTF4LLC_GITHUB_APP_PRIVATE_KEY {{"}}"}}
       - uses: extractions/netrc@v2
         with:
           machine: github.com
-          password: ${{"{{"}} steps.generate-token.outputs.token ${{"}}"}}
-          username: ${{"{{"}} secrets.ALTF4LLC_GITHUB_APP_USER ${{"}}"}}
-      {{ end }}
+          password: ${{"{{"}} steps.generate-token.outputs.token {{"}}"}}
+          username: ${{"{{"}} secrets.ALTF4LLC_GITHUB_APP_USER {{"}}"}}
+      {{ end -}}
       - uses: actions/checkout@v4
-      {{ if .PrivateModules }}
+      {{ if .PrivateModules -}}
       - run: cp --no-preserve=mode ~/.netrc /tmp/.netrc
-      {{ end }}
+      {{ end -}}
       - run: nix develop -c just build
-      {{- if .PrivateModules -}}
+      {{ if .PrivateModules -}}
       - run: rm -rf /tmp/.netrc
         if: success() || failure()
       {{- end -}}
