--- a/build-configs.yaml
+++ b/build-configs.yaml
@@ -3,6 +3,6 @@ name: build-configs
 template: go-cobra-cli
 parameters:
   nix:
-    vendorHash: ''
+    vendorHash: sha256-6B9O6ho4COpJy4HlkzQ0lk+ieezRO3xg9LyLHzoxYzc=
     goPackage: go_1_22
     buildGoModule: buildGo122Module
