--- a/internal/templates/templates/common/go/.github__workflows__golangci-lint.yaml
+++ b/internal/templates/templates/common/go/.github__workflows__golangci-lint.yaml
@@ -15,7 +15,7 @@ jobs:
       GOPRIVATE: github.com/ALT-F4-LLC/quirk-service-kit
     runs-on: ubuntu-latest
     steps:
-      {{ if .PrivateModules }}
+      {{ if .PrivateModules -}}
       - id: generate-token
         uses: actions/create-github-app-token@v1
         with:
@@ -27,7 +27,7 @@ jobs:
           machine: github.com
           password: ${{"{{"}} steps.generate-token.outputs.token ${{"}}"}}
           username: ${{"{{"}} secrets.ALTF4LLC_GITHUB_APP_USER ${{"}}"}}
-      {{ end }}
+      {{ end -}}
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
