feat: update golangci-lint config template

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,5 +1,5 @@
 ---
 issues:
   exclude:
-    - "Error return value of `\(github.com/go-kit/log.Logger\).Log` is not checked"
+    - Error return value of `\(github.com/go-kit/log.Logger\).Log` is not checked
     
