--- a/internal/templates/templates/common/go/.golangci.yaml
+++ b/internal/templates/templates/common/go/.golangci.yaml
@@ -1,9 +1,9 @@
 ---
 issues:
   exclude:
-    {{ range .Lint.Exclude -}}
+    {{- range .Lint.Exclude }}
     - {{ . }}
     {{- end }}
-    {{ range .Lint.ExtraExclude -}}
+    {{- range .Lint.ExtraExclude }}
     - {{ . }}
     {{- end }}
