--- a/internal/templates/templates/go-lambda/justfile
+++ b/internal/templates/templates/go-lambda/justfile
@@ -59,7 +59,7 @@ build-client{{ if .PrivateModules }} netrc="/tmp/.netrc=/tmp/.netrc"{{ end }}:
     #!/usr/bin/env bash
     DERIVATION=$(just build client "{{"{{"}} netrc {{"}}"}}")
     OUTPUT=$(echo $DERIVATION | jq -r ".[0].outputs.out")
+    mkdir -p pkg
     rm -rf pkg/client
     cp -r --no-preserve=mode $OUTPUT pkg/client
-    git add pkg/client
 {{- end }}
