fix: update lambda templates to resolve build issues (#15)
* fix: update lambda templates to resolve build issues

* fix: resolve nix syntax errors

* fix: resolve openapi issues

* fix: update template to keep tests

--- a/internal/templates/templates/go-lambda/justfile
+++ b/internal/templates/templates/go-lambda/justfile
@@ -55,11 +55,11 @@ deploy-all environment:
     {{- end }}
 
 {{ if .OpenAPI.Enable -}}
-build-client:
+build-client{{ if .PrivateModules }} netrc="/tmp/.netrc=/tmp/.netrc"{{ end }}:
     #!/usr/bin/env bash
     DERIVATION=$(just build client "{{"{{"}} netrc {{"}}"}}")
     OUTPUT=$(echo $DERIVATION | jq -r ".[0].outputs.out")
+    mkdir -p pkg
     rm -rf pkg/client
     cp -r --no-preserve=mode $OUTPUT pkg/client
-    git add pkg/client
 {{- end }}
