feat(workflow): add manual trigger for Terraform GitHub Actions workflow
- Added `workflow_dispatch` to allow manual triggering of the workflow.
- This change enhances the flexibility of the CI/CD pipeline by enabling on-demand execution.

--- a/internal/templates/templates/terraform/.github__workflows__terraform.yaml
+++ b/internal/templates/templates/terraform/.github__workflows__terraform.yaml
@@ -9,6 +9,7 @@ on:
   schedule:
     - cron: "{{ .Schedule }}"
   {{- end }}
+  workflow_dispatch:
 
 env:
   CACHIX_BINARY_CACHE: {{ .Nix.Cachix.BinaryCache }}
